--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
+<h1>项目捐赠</h1>
+<p>此项目为开源项目，可永久免费使用，没有强制捐赠要求！</p>
+<div align="center">
+	<table width=1000>
+		<tr>
+		<td><p>微信捐赠</p></td>
+		<td><p>支付宝捐赠</p></td>
+		</tr>
+		<tr>
+		<td><img src="../static/weixin11.jpg" width=200 height=200 alt="微信捐赠"></td>
+		<td><img src="../static/zhifubao11.jpg" width=200 height=200 alt="支付宝捐赠"></td>
+		</tr>
+	</table>
+</div>
 <p>If you are interested in the web, call the phone 15542377707, the same number with WeChat!</p>
 
 {% endblock %}
