--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,10 +12,10 @@
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
-    <font color="red"><p><b>分析报告系列</b></p></font>
+    <!-- <font color="red"><p><b>分析报告系列</b></p></font>
     <p>
         <a href="/cornAnalysisReport" target="_blank">玉米分析报告</a>&nbsp;&nbsp;
-    </p>
+    </p> -->
     <!-- <br> -->
     <!-- ###################################################################################### -->
     <font color="red"><p><b>天气情况</b></p></font>
@@ -44,13 +44,14 @@
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
-    <font color="red"><p><b>第三方分析报告</b></p></font>
+    <font color="red"><p><b>分析报告</b></p></font>
     <p>
         <a href="/grainReport" target="_blank">谷物报告</a>&nbsp;&nbsp;
         <a href="/oilSeedReport" target="_blank">油脂油料报告</a>&nbsp;&nbsp;
         <a href="/rbjiReport" target="_blank">黑色产业报告</a>&nbsp;&nbsp;
         <a href="/chemicalsReport" target="_blank">化工品报告</a>&nbsp;&nbsp;
-        <a href="/otherReport" target="_blank">其他</a>
+        <a href="/otherReport" target="_blank">其他</a>&nbsp;&nbsp;
+        <a href="/cornAnalysisReport" target="_blank">玉米分析报告</a>
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
@@ -64,13 +65,14 @@
     </p>
     <!-- <br> -->
     <!-- ###################################################################################### -->
-    <font color="red"><p><b>数据录入</b></p></font>
+    <font color="red"><p><b>其他</b></p></font>
     <p>
         <a href="/cornPriceInsert" target="_blank">玉米现货价格录入</a>&nbsp;&nbsp;
+        <a href="/aboutus" target="_blank">项目捐赠</a>
     </p>
     <br>
     <!-- ###################################################################################### -->
     <br>
-    <div align="right"><p><a href="/aboutus" target="_blank">关于我们</a></p></div>
+    <!-- <div align="right"><p><a href="/aboutus" target="_blank">项目捐赠</a></p></div> -->
     <div align="right"><p><a href="/temptest" target="_blank">临时测试</a></p></div>
 {% endblock %}
