--- a/app/templates/cornspreadchart.html
+++ b/app/templates/cornspreadchart.html
@@ -6,6 +6,7 @@
     <!-- 引入 echarts.js -->
     <!-- <script src="js/echarts.js"></script> -->
     <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/css/mystyle.css">
 </head>
 <body>
     <div align="center">
@@ -32,7 +33,7 @@
         //     }, 3000);
         // }
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('corncs1'), 'vintage');
+        var myChart1 = echarts.init(document.getElementById('corncs1'), 'vintage');
         var my_corn_cs_spread1_year_l = {{corn_cs_spread1_year_l|tojson}};
         // myChart.showLoading();
 
@@ -125,7 +126,7 @@
 
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        myChart1.setOption(option);
 
         // fetchData(function (data) {
         //     myChart.hideLoading();
@@ -156,7 +157,7 @@
 
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('corncs5'), 'vintage');
+        var myChart2 = echarts.init(document.getElementById('corncs5'), 'vintage');
         var my_corn_cs_spread5_year_l = {{corn_cs_spread5_year_l|tojson}};
         // myChart.showLoading();
 
@@ -248,12 +249,12 @@
 
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        myChart2.setOption(option);
     </script>
 
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('corncs9'), 'vintage');
+        var myChart3 = echarts.init(document.getElementById('corncs9'), 'vintage');
         var my_corn_cs_spread9_year_l = {{corn_cs_spread9_year_l|tojson}};
         // myChart.showLoading();
 
@@ -345,12 +346,12 @@
 
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        myChart3.setOption(option);
     </script>
 
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('corn9_1'), 'vintage');
+        var myChart4 = echarts.init(document.getElementById('corn9_1'), 'vintage');
         var my_corn_91_year_l = {{corn_91_year_l|tojson}};
         // myChart.showLoading();
 
@@ -442,12 +443,12 @@
 
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        myChart4.setOption(option);
     </script>
 
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('corn1_5'), 'vintage');
+        var myChart5 = echarts.init(document.getElementById('corn1_5'), 'vintage');
         var my_corn_15_year_l = {{corn_15_year_l|tojson}};
         // myChart.showLoading();
 
@@ -540,12 +541,12 @@
 
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        myChart5.setOption(option);
     </script>
 
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('corn5_9'), 'vintage');
+        var myChart6 = echarts.init(document.getElementById('corn5_9'), 'vintage');
         var my_corn_59_year_l = {{corn_59_year_l|tojson}};
         // myChart.showLoading();
 
@@ -638,11 +639,11 @@
 
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        myChart6.setOption(option);
     </script>
 
     <script type="text/javascript">
-        var myChart1 = echarts.init(document.getElementById('corncs'), 'vintage');
+        var myChart7 = echarts.init(document.getElementById('corncs'), 'vintage');
         var my_corn_cs_spread_df_l = {{corn_cs_spread_df_l}};
         var option = {
             title: {
@@ -705,7 +706,20 @@
                 }
             ]
         };
-        myChart1.setOption(option);
+        myChart7.setOption(option);
     </script>
+
+    <script type="text/javascript">
+        window.onresize = function(){
+            myChart1.resize();
+            myChart2.resize();
+            myChart3.resize();
+            myChart4.resize();
+            myChart5.resize();
+            myChart6.resize();
+            myChart7.resize();
+        }
+    </script>
+
 </body>
 </html>
