--- a/app/templates/cornspreadchart.html
+++ b/app/templates/cornspreadchart.html
@@ -14,13 +14,13 @@
         <!-- <p>{{corn_cs_spread_df_l}}</p> -->
     </div>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="corncs1" style="width: 600px;height:300px;"></div>
-    <div id="corncs5" style="width: 600px;height:300px;"></div>
-    <div id="corncs9" style="width: 600px;height:300px;"></div>
+    <div id="corncs1" class="chart600"></div>
+    <div id="corncs5" class="chart600"></div>
+    <div id="corncs9" class="chart600"></div>
     <!-- <div id="corncs" style="width: 1200px;height:500px;"></div> -->
-    <div id="corn9_1" style="width: 600px;height:300px;"></div>
-    <div id="corn1_5" style="width: 600px;height:300px;"></div>
-    <div id="corn5_9" style="width: 600px;height:300px;"></div>
+    <div id="corn9_1" class="chart600"></div>
+    <div id="corn1_5" class="chart600"></div>
+    <div id="corn5_9" class="chart600"></div>
 
     <script type="text/javascript">
         // function fetchData(cb) {
